--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,60 @@
 Книги
 {% endblock %}
 
-{% block body %}<h1 class="container">Добро пожаловать, {{ user_name }}!</h1>{% endblock %}
+{% block body %}<h1 class="">
+    Добро пожаловать, {{ user_name }}!
+    <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus voluptate aspernatur distinctio impedit
+    sint. Id quo, accusamus, deleniti commodi, voluptatibus ratione tempora impedit hic nemo illum error facilis soluta
+    doloribus? Beatae cum, ducimus illo pariatur perspiciatis sunt hic placeat sit unde temporibus numquam qui id vero
+    soluta impedit ratione repellendus nostrum quod dolore error architecto atque, ad cupiditate? Maxime, labore?
+    Voluptas adipisci quis atque non inventore sapiente tempora animi asperiores molestiae magni suscipit, nulla velit,
+    harum assumenda esse iusto cum deserunt amet ad, eum placeat vel. Soluta quos vitae nulla!
+    Facilis ex harum accusamus quos eius quibusdam rem modi, deleniti officiis ullam excepturi ipsum quisquam delectus
+    suscipit sit, ipsa, minima molestias! Provident quasi excepturi nisi odio in, temporibus neque id?
+    Asperiores numquam incidunt deleniti est vero eveniet voluptates qui assumenda minima? Rerum officiis nobis error in
+    hic alias pariatur commodi deleniti ipsa, possimus vitae? Sit quam enim aliquam quo perspiciatis!
+    Odio voluptas architecto temporibus. Dolorem ex fuga omnis unde officia? Quidem libero quisquam amet ullam eum?
+    Temporibus nihil est, nisi sint facilis, nesciunt molestias deleniti ab ratione quaerat sunt rem.
+    Commodi voluptate nesciunt ab debitis magni ipsum harum ipsam perferendis nobis dignissimos cumque labore sapiente
+    nostrum, maiores asperiores velit nulla atque quibusdam voluptatem? Sed cupiditate natus dolore, officia harum illo!
+    Illo dolores pariatur vitae nisi dolorum optio numquam eius aliquid, qui molestiae dolor vero magnam eaque culpa
+    nemo blanditiis enim. Inventore voluptatum repellendus expedita debitis sunt est cupiditate unde impedit.
+    Voluptate distinctio recusandae, rerum perspiciatis odio aspernatur velit pariatur modi a nesciunt, iure nostrum
+    ipsum excepturi. Ducimus architecto fuga tempore vero eaque magnam libero tenetur sed. Deserunt eos deleniti
+    inventore? Aliquid, animi! Totam error labore, fuga iusto assumenda, voluptatem delectus maxime perferendis odio
+    consectetur natus nobis odit voluptate praesentium accusamus facilis quasi quo eius aperiam culpa! Quo beatae odit
+    repellendus.
+    Temporibus veritatis natus qui explicabo adipisci quas perspiciatis recusandae, nobis accusamus. Ipsa possimus,
+    culpa minus numquam nisi, porro alias, repellendus voluptate facilis eius distinctio quia aliquam veritatis mollitia
+    corrupti hic?
+    Dignissimos illo dolorem amet deleniti laudantium unde quos natus officia maxime id voluptates possimus debitis
+    consectetur assumenda voluptate, tenetur eligendi, architecto, maiores consequuntur obcaecati nesciunt totam! Error
+    nemo rem sunt.
+    Quas quod rerum sunt, facere aperiam ipsam impedit, libero ab molestiae quia hic quidem? Amet dignissimos voluptas
+    aliquam cum et quo placeat sit fugiat expedita modi temporibus, facilis tempora tenetur?
+    Possimus ipsum omnis laboriosam dicta doloremque, repellendus esse! Itaque iure laudantium unde alias? Expedita,
+    repudiandae alias natus quam dicta, vero tenetur sunt omnis quo eos molestiae id! Nihil, laudantium aut!
+    Nihil unde eveniet natus, est rerum quis voluptate atque mollitia, repellat totam provident in neque voluptas
+    dolorem praesentium laborum eligendi alias repellendus maxime molestiae sequi animi, architecto voluptatum?
+    Exercitationem, aliquam!
+    Facere, quidem. Necessitatibus, minima ut aut autem quia, inventore quidem quam odit dolorem officia quas. Debitis
+    maiores vero reiciendis dicta, facere ducimus natus libero non eos dolorem ex accusantium. Ipsam.
+    Quibusdam non sequi at. Fugiat illum, aut quidem ad repellendus alias quae laudantium ipsa, consequuntur, totam
+    corrupti facere labore amet similique? Repudiandae perspiciatis nobis facilis animi ad vitae reiciendis inventore.
+    Consequuntur maxime modi odio voluptas ut quas sapiente labore exercitationem doloremque est. Corporis culpa dolores
+    et sed tenetur quidem repellendus labore accusamus quas. Ipsam, modi laboriosam quos minima explicabo
+    necessitatibus!
+    Voluptates commodi excepturi, quam laboriosam sed placeat eius accusamus esse aliquam? In modi perspiciatis laborum
+    ullam obcaecati perferendis voluptates vero pariatur quam corporis eaque, voluptate quidem, excepturi ratione,
+    beatae nam.
+    Ea ullam unde dicta in cupiditate tempore beatae. Ipsa est nobis, soluta aliquam obcaecati, dignissimos doloribus
+    adipisci sunt exercitationem deleniti enim aliquid. Reprehenderit sunt omnis repellendus! Voluptatem mollitia porro
+    repellat.
+    Numquam explicabo, alias odio repudiandae perferendis aliquam neque mollitia magni vel dolorem consectetur
+    consequuntur veniam pariatur aspernatur rerum. Blanditiis aliquid quod voluptatibus veniam aperiam voluptatum at.
+    Asperiores sunt ullam dolorum.
+    Sed illo totam iusto quo, nobis quas eos quod inventore eum at molestias. Pariatur, tenetur possimus cupiditate eos,
+    perferendis ratione enim consequuntur veniam assumenda iste quidem, porro ipsum provident voluptatum.
+    Doloremque voluptate fugiat ab laboriosam error sint repellat quam minima saepe ad, quidem asperiores similique ea
+    iusto cum optio, harum consequatur, unde nam laborum necessitatibus sit recusandae eum! Necessitatibus, nemo!
+</h1>{% endblock %}
