--- a/templates/register.html
+++ b/templates/register.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <!-- <script language="JavaScript" type="text/javascript" src="jquery.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="jquery-ui-personalized-1.5.2.packed.js"></script>
-    <script language="JavaScript" type="text/javascript" src="sprinkle.js"></script> -->
     <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Регистрация</title>
 
@@ -20,7 +17,7 @@
 
         <form method="post" autocomplete="on">
             <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="126" height="126" viewBox="0 0 512 512">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="126" height="126" viewBox="0 0 512 512">
                     <path
                         d="M64,480H48a32,32,0,0,1-32-32V112A32,32,0,0,1,48,80H64a32,32,0,0,1,32,32V448A32,32,0,0,1,64,480Z" />
                     <path d="M240,176a32,32,0,0,0-32-32H144a32,32,0,0,0-32,32v28a4,4,0,0,0,4,4H236a4,4,0,0,0,4-4Z" />
@@ -30,6 +27,15 @@
                         d="M320,480H288a32,32,0,0,1-32-32V64a32,32,0,0,1,32-32h32a32,32,0,0,1,32,32V448A32,32,0,0,1,320,480Z" />
                     <path
                         d="M495.89,445.45l-32.23-340c-1.48-15.65-16.94-27-34.53-25.31l-31.85,3c-17.59,1.67-30.65,15.71-29.17,31.36l32.23,340c1.48,15.65,16.94,27,34.53,25.31l31.85-3C484.31,475.14,497.37,461.1,495.89,445.45Z" />
+                </svg> -->
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="126" height="126"
+                    viewBox="0 0 512.000000 512.000000" preserveAspectRatio="xMidYMid meet">
+
+                    <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000"
+                        stroke="none">
+                        <path
+                            d="M895 4899 c-93 -14 -163 -37 -260 -87 -162 -83 -310 -254 -370 -429 -49 -140 -57 -319 -20 -458 36 -138 138 -304 237 -387 l49 -42 -68 -12 c-80 -13 -115 -30 -161 -75 -57 -56 -77 -104 -77 -189 0 -64 4 -82 29 -128 53 -95 123 -132 271 -141 l99 -6 23 -72 c53 -170 50 -353 -9 -510 l-19 -53 -78 0 c-149 0 -237 -46 -290 -151 -35 -71 -40 -137 -15 -204 8 -22 17 -47 20 -55 3 -10 -10 -23 -41 -39 -52 -28 -136 -115 -166 -172 -46 -92 -49 -125 -49 -619 0 -506 2 -531 57 -632 32 -59 107 -134 170 -170 108 -62 -30 -59 2438 -56 l2250 3 45 21 c55 25 103 72 133 128 30 58 31 174 0 232 -26 49 -92 111 -141 131 -19 8 -80 18 -136 21 l-100 7 -22 71 c-55 174 -52 351 8 511 l19 53 82 0 c45 0 99 5 119 10 63 18 129 70 162 130 27 48 31 65 31 130 0 57 -6 85 -22 115 -28 53 -78 99 -133 124 -42 19 -65 21 -337 21 -161 0 -293 2 -293 4 0 2 16 29 35 61 62 103 60 83 60 651 l0 520 -37 75 c-67 136 -185 225 -328 248 -36 6 -113 11 -172 11 l-108 0 11 28 c6 15 11 54 12 87 1 158 -122 275 -288 275 -62 0 -65 6 -91 132 -19 95 -15 190 14 283 l18 60 84 11 c97 12 134 29 186 81 129 128 94 345 -70 431 l-51 27 -1325 1 c-729 1 -1352 -2 -1385 -7z m2690 -155 c88 -42 92 -156 8 -211 -25 -17 -81 -18 -756 -23 -707 -5 -729 -6 -743 -24 -16 -23 -18 -59 -4 -86 20 -38 55 -40 643 -40 538 0 569 -1 562 -17 -4 -10 -14 -54 -22 -98 -17 -91 -12 -218 12 -305 8 -30 15 -56 15 -57 0 -2 -528 -3 -1172 -3 -1158 0 -1174 1 -1218 21 -95 43 -143 116 -144 219 0 72 21 124 70 174 63 62 48 61 532 66 l444 5 24 28 c29 34 30 56 3 91 l-20 26 -445 0 c-418 0 -448 -1 -501 -20 -170 -60 -283 -245 -256 -419 21 -135 108 -252 230 -309 l58 -27 1337 -5 1337 -5 28 -21 c62 -46 63 -137 1 -189 l-30 -25 -1356 2 -1357 3 -67 26 c-253 99 -410 307 -425 564 -20 324 211 610 533 664 27 5 633 9 1347 10 1167 1 1302 -1 1332 -15z m523 -1433 c65 -29 134 -104 156 -168 24 -70 24 -956 0 -1026 -22 -64 -91 -139 -156 -168 l-53 -24 -987 -3 -988 -3 0 121 0 120 920 0 c785 0 925 2 949 14 47 25 89 81 96 128 3 24 5 187 3 364 l-3 321 -25 36 c-13 20 -41 45 -61 56 -37 21 -40 21 -1758 21 -1849 0 -1760 -2 -1806 50 -14 15 -20 36 -20 70 0 54 20 84 70 106 25 11 348 13 1820 11 l1790 -2 53 -24z m-213 -681 l0 -315 -907 -3 -908 -2 0 125 0 125 279 0 280 0 20 26 c27 35 26 57 -3 91 l-24 28 -901 3 -901 2 0 23 c0 22 -33 168 -45 200 -7 16 69 17 1551 15 l1559 -3 0 -315z m-2597 -197 l3 -123 -262 0 c-245 0 -261 1 -254 18 4 9 16 60 27 112 11 52 22 101 24 108 3 10 54 12 231 10 l228 -3 3 -122z m630 -530 c1 -359 -1 -653 -4 -653 -4 0 -51 43 -106 95 -124 120 -132 121 -226 33 -37 -34 -84 -78 -104 -97 l-38 -35 0 657 0 657 238 -2 237 -3 3 -652z m-630 140 l-3 -118 -385 -3 c-212 -2 -404 0 -428 3 -27 4 -55 17 -75 35 -28 25 -32 35 -32 78 0 53 26 94 70 112 11 5 208 9 438 9 l418 1 -3 -117z m2 -388 l0 -115 -390 0 c-307 0 -398 -3 -423 -14 -42 -17 -83 -66 -97 -114 -14 -53 -12 -658 3 -697 18 -45 38 -70 77 -94 l35 -21 2170 0 c1405 0 2183 -4 2206 -10 47 -13 80 -50 85 -97 6 -47 -11 -80 -55 -110 l-34 -23 -2256 2 -2256 3 -51 27 c-28 15 -70 48 -93 74 -72 81 -72 87 -69 625 l3 474 27 50 c24 45 52 78 100 114 50 38 82 40 556 41 l462 0 0 -115z m3622 95 c57 -45 61 -125 7 -176 l-30 -29 -720 -5 c-699 -5 -721 -6 -735 -24 -23 -33 -18 -82 12 -105 26 -21 36 -21 566 -21 482 0 540 -2 534 -15 -17 -46 -36 -130 -47 -205 -13 -104 -5 -215 26 -332 l22 -88 -2011 2 -2011 3 0 315 0 315 383 3 382 2 0 -147 c0 -162 7 -189 53 -211 50 -24 82 -7 214 116 l124 115 107 -105 c148 -146 185 -162 244 -109 l33 29 3 156 4 156 533 0 534 0 25 23 c36 32 39 74 6 107 -20 20 -33 20 -560 20 l-540 0 0 115 0 115 1409 0 c1385 0 1409 0 1433 -20z" />
+                    </g>
                 </svg>
             </div>
             <h1>Регистрация</h1>
