--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"> -->
   <title>{% block title %}{% endblock %}</title>
 </head>
 
 <style>
   body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'monospace';
     background: #EDE0D4;
   }
 
