--- a/templates/register.html
+++ b/templates/register.html
@@ -4,12 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Регистрация</title>
-
-
 </head>
+
+<style>
+    body {
+        font-family: 'monospace';
+        background: #EDE0D4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+
+    }
+
+    .container {
+        background: #E6CCB2;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 400px;
+    }
+
+    /* .logo {
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+} */
+
+    /* h1 {
+	margin-bottom: 1.5rem;
+	text-align: center;
+} */
+
+    .input-group {
+        margin-bottom: 1.25rem;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 0.5rem;
+    }
+
+    input {
+        width: 100%;
+        padding: 0.75rem;
+        border: 1px solid #DDB892;
+        border-radius: 8px;
+        font-size: 16px;
+        box-sizing: border-box;
+    }
+
+    input:focus {
+        border-color: black;
+        outline: none;
+    }
+
+    button {
+        width: 100%;
+        padding: 0.75rem;
+        background-color: #B08968;
+        color: black;
+        border: none;
+        border-radius: 8px;
+        font-size: 18px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+        background-color: #DDB892;
+    }
+
+    p {
+        text-align: center;
+        margin-top: 1rem;
+    }
+
+    a {
+        color: #9C6644;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    #output {
+        text-align: center;
+        color: red;
+        padding-bottom: 0.75rem;
+    }
+</style>
 
 <body>
 
@@ -176,11 +263,17 @@
             // Для проверки правильности ввода каждого поля
             is_valid = true;
 
-            if (password !== passwordConfirm) {
+            if (password.length < 8) {
+                showError(document.getElementById("password"), "Пароль менее 8 символов");
+                console.log("Пароль менее 8 символов");
+                is_valid = false;
+            }
+            else if (password !== passwordConfirm) {
                 showError(document.getElementById("confirm_password"), "Пароли не совпадают");
                 console.log("Пароли не совпадают");
                 is_valid = false;
             }
+
             if (!validateEmail(email)) {
                 showError(document.getElementById("email"), "Неккоректный email");
                 console.log("Неккоректный email");
